<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/fromLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/from_latitude"
        android:enabled="false"
        android:text="40.71"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/fromLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/from_longitude"
        android:enabled="false"
        android:text="-74.008"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/toLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to_latitude"
        android:enabled="false"
        android:text="40.72"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/toLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to_longitude"
        android:enabled="false"
        android:text="-74.19"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/speedTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/speed"
        android:enabled="false"
        android:inputType="numberSigned|numberDecimal"/>

    <Button
        android:id="@+id/btnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getValues"
        android:enabled="false"
        android:text="@string/start"/>

    <fragment xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.admin.mapsexcercise.showroute.view.MapsActivity" />

</LinearLayout>